# sistema-peso-classificacao

./: .gitignore  CMakeLists.txt  README.md  partitions.csv
components/config/include/: config.h
components/http/: CMakeLists.txt  http_server.c
components/http/include/: http_server.h
components/http/webpage/: app.css  app.js  index.html
components/wifi_app/: CMakeLists.txt  wifi_app.c
components/wifi_app/include/: wifi_app.h
main/: CMakeLists.txt  config.h  idf_component.yml  main.c
main/drivers/: hx711_driver.c  hx711_driver.h  ir_sensor.c  ir_sensor.h  led_buzzer.c  led_buzzer.h  rtc_ds3231.c  rtc_ds3231.h  spiffs_manager.c  spiffs_manager.h
main/tasks/: task_classificacao.c  task_classificacao.h  task_deteccao.c  task_deteccao.h  task_feedback.c  task_feedback.h  task_leitura_peso.c  task_leitura_peso.h  task_registro.c  task_registro.h
