idf_component_register(
  SRCS
    "main.c"
    "drivers/rtc_ds3231.c"
    "drivers/led_buzzer.c"
    "drivers/hx711_driver.c"
    "drivers/ir_sensor.c"
    "drivers/spiffs_manager.c"
    "tasks/task_deteccao.c"
    "tasks/task_classificacao.c"
    "tasks/task_registro.c"
    "tasks/task_feedback.c"
    "tasks/task_leitura_peso.c"
  INCLUDE_DIRS
    "."
    "drivers"
  REQUIRES
    wifi_app
    driver
    esp_timer
    freertos
    spiffs
    http
    config
    hx711
    nvs_flash
)
