idf_component_register(
    SRCS
        "http_server.c"
    INCLUDE_DIRS
        "include"
    REQUIRES
        esp_http_server
        spiffs
    EMBED_FILES
        "webpage/index.html"
        "webpage/app.css"
        "webpage/app.js"
        "webpage/jquery-3.3.1.min.js"
        "webpage/favicon.ico"
)
